# pyramid_asset3d

./: Cargo.toml
src/: assimp_asset.rs  lib.rs
